src/listCreator.css
#content > button{
    --width: 7vh;
    width: var(--width);
    height: 7vh;
    border-radius: 50%;
    background-color: var(--pink);
    border: none;
    position: relative;
    left: 50%;
    margin-left: calc(-1 * var(--width) * 0.5);
    top: 10px;
    transition: 1s;
    font-weight: 1000;
    font-size: 1.5rem;
    color: white;
}

#content > button:hover{
    --width: 21vh;
    border-radius: 15px;
}
#content > button:hover::after{
    content: ' Add Task';
    animation: fadein 1100ms ease-in 0s 1 forwards;
    font-weight: 100;
    font-size: 1rem;
}
@keyframes fadein {
    0%{
        opacity: 0;
    }
    100%{
        opacity: 1;
    }
}
#listContainer{
    position: absolute;
    top: 23%;
    height: 2px;
    background-color: inherit;
    width: 80%;
    left: 50%;
    margin-left: calc(-40%);
    display: flex;
    flex-direction: column;
    gap: 10px;
    height: max-content;
}

#listContainer > div{
    box-sizing: border-box;
    height: 5vh;
    width: 100%;
    background-color: white;
    border: solid 1px var(--blue);
    padding: 0px 5px;
    overflow: hidden;
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    line-height: 5vh;
    display: grid;
    grid-template-columns: 10fr 1fr;
    justify-content: space-between;
}
#listContainer > div > div{
    box-sizing: border-box;
    width: 100%;
    height: 100%;
}
#listContainer > div button{
    box-sizing: border-box;
    height: min(90%, 53px);
    background-color: transparent;
    border: none;
    border-radius: 5px;
    background-repeat: no-repeat;
    background-position: center;
}

